5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1845_2220.log
== SUBMITION (2019-06-25 23:14:53) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
0.977543
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:26:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:30:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=max(m_tabela[i,:])


print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:31:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=max(m_tabela[i,:])


print(zeros.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:38:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=max(m_tabela[i,:])
m_aux=array([[zeros(0)],[zeros(1)],[zeros(2)],[zeros(3)]])
print(m_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:39:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=max(m_tabela[i,:])
m_aux=array([[zeros[0]],[zeros[1]],[zeros[2]],[zeros[3]]])
print(m_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:39:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=max(m_tabela[i,:])
m_aux=array([[zeros[0]],[zeros[1]],[zeros[2]],[zeros[3]]])
print(m_aux)

-- EXECUTION TIME:
1.01514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1845/2220/main.py", line 9, in <module>
    m_aux=array([[zeros[0]],[zeros[1]],[zeros[2]],[zeros[3]]])
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:40:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	zeros[i]=max(m_tabela[i,:])
m_aux=array([[zeros[0]],[zeros[1]],[zeros[2]],[zeros[3]]])
print(m_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:41:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
   print(max(m_tabela[i,:])
	

-- EXECUTION TIME:
0.808523
-- ERROR:
  File "/home/codebench/codes/1845/2220/main.py", line 10
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:41:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
   print(max(m_tabela[i,:])
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:42:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
   print(max(m_tabela[i,:])
-- ERROR:
File "XXXX", line 9
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:42:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	print(max(m_tabela[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:42:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	print(max(m_tabela[i,:]))
-- EXECUTION TIME:
1.21671
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:43:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
coluna=shape(m_tabela)[1]
zeros=zeros(linha, dtype=float)
for i in range(linha):
	print(max(m_tabela[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:44:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]

for i in range(linha):
	print(max(m_tabela[i,:]))#dar as saidas dos valores maximos
-- EXECUTION TIME:
1.11236
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
valores: 89.7
99.9
93.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 06:02:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
m_tabela=array(eval(input("valores: ")))
linha=shape(m_tabela)[0]
for i in range(linha):
	print(max(m_tabela[i,:]))#dar as saidas dos valores maximos
-- EXECUTION TIME:
1.07031
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
